--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "streamui---ai-powered-movie-&-series-discovery",
+  "name": "zenstream",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,9 +11,9 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
-    "react-router-dom": "^7.11.0",
-    "@supabase/supabase-js": "^2.48.1"
+    "@google/genai": "1.34.0",
+    "react-router-dom": "7.11.0",
+    "@supabase/supabase-js": "2.48.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
