feat: Add Adsterra social link and update service worker
Integrates a new Adsterra social link script into the index.html.
Updates the service worker to improve cache management and implement a more robust network-first strategy for navigation requests, ensuring better offline experience for the single-page application. Also increments cache version.

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "ZenStream - Cinematic Discovery",
   "short_name": "ZenStream",
   "description": "Explore millions of movies and series with ZenStream. Pure cinematic discovery.",
-  "start_url": "./",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#040404",
   "theme_color": "#1ce783",
